--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -77,7 +77,8 @@
     "# 1. Import the sqlalchemy extract function.\n",
     "from sqlalchemy import extract\n",
     "\n",
-    "# 2. Write a query that filters the Measurement table to retrieve the temperatures for the month of June. \n"
+    "# 2. Write a query that filters the Measurement table to retrieve the temperatures for the month of June. \n",
+    "june_temperature = session.query(Measurement).filter(extract('month', Measurement.date) == 6)"
    ]
   },
   {
@@ -86,7 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  3. Convert the June temperatures to a list.\n"
+    "#  3. Convert the June temperatures to a list.\n",
+    "june_temperature_list = [temp.tobs for temp in june_temperature]"
    ]
   },
   {
@@ -95,7 +97,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. Create a DataFrame from the list of temperatures for the month of June. \n"
+    "# 4. Create a DataFrame from the list of temperatures for the month of June. \n",
+    "june_df = pd.DataFrame(june_temperature_list,columns=['June Temperatures'])\n",
+    "june_df.head()"
    ]
   },
   {
@@ -104,7 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5. Calculate and print out the summary statistics for the June temperature DataFrame.\n"
+    "# 5. Calculate and print out the summary statistics for the June temperature DataFrame.\n",
+    "june_df.describe()"
    ]
   },
   {
